--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ cache: npm
 install:
     - npm install --prefix client && npm install -g gulp-cli
 script:
-    - gulp --cwd client build
+    - gulp --cwd client
 deploy:
     provider: pages
     skip_cleanup: true
     github_token: $GITHUB_TOKEN
     keep_history: true
-    local-dir: dashboard/public
+    local-dir: client/build
     on:
         branch: master
