move babel into webpack

--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "gulp-babel": "^8.0.0",
+    "babel-loader": "^8.0.6",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-htmlmin": "^5.0.1",
