--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
 language: node_js
 node_js:
-    - 12
+    - lts/*
 branches:
     only:
         - master
 cache: npm
+before_install: cd client
 install:
-    - npm install --prefix client
-    - npm install -g gulp-cli
+    - npm ci
+before_script: cd client
 script:
-    - gulp --cwd client
-    - echo "r.dve.tw" > client/build/CNAME
+    - npm run build
+    - echo "r.dve.tw" > dist/CNAME
 deploy:
     provider: pages
     skip_cleanup: true
     github_token: $GITHUB_TOKEN
     keep_history: true
-    local-dir: client/build
+    local_dir: client/dist
     on:
         branch: master
