--- a/client/package.json
+++ b/client/package.json
@@ -1,36 +1,24 @@
 {
-  "name": "shorten-url-client",
-  "version": "0.0.1",
-  "description": "A WebUI for shorten-url",
-  "main": "gulpfile.js",
+  "name": "url-shortener",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "gulp",
-    "shorten-url"
-  ],
-  "author": "oToToT",
-  "license": "ISC",
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "webpack-cli": "^3.3.7"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
-    "babel-loader": "^8.0.6",
-    "gulp-concat": "^2.6.1",
-    "gulp-csso": "^3.0.1",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-js-import": "^1.0.6",
-    "gulp-less": "^4.0.1",
-    "gulp-pug": "^4.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.2",
-    "vinyl-named": "^1.1.0",
-    "webpack-stream": "^5.2.1"
+    "vue": "^3.2.6"
+  },
+  "devDependencies": {
+    "@sweetalert2/theme-bootstrap-4": "^5.0.3",
+    "@vitejs/plugin-legacy": "^1.5.3",
+    "@vitejs/plugin-vue": "^1.6.0",
+    "@vue/compiler-sfc": "^3.2.6",
+    "axios": "^0.21.4",
+    "clipboard": "^2.0.8",
+    "pug": "^3.0.2",
+    "sass": "^1.39.0",
+    "sweetalert2": "^11.1.4",
+    "vite": "^2.5.2"
   }
 }
