--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         node-version: 16
         cache: 'npm'
+        cache-dependency-path: 'client/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
     - name: Deploy
