--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         cache-dependency-path: 'client/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
+    - run: echo 'r.dve.tw' > dist/CNAME
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
