--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,9 @@ name: Deploy Frontend
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - server
+      - README.md
 
 jobs:
   build:
